got a map to display in app, no data on it yet

--- a/ESM244_Shiny_Project/map_test.Rmd
+++ b/ESM244_Shiny_Project/map_test.Rmd
@@ -104,6 +104,11 @@ map2 <- map1 +
         axis.title.y = element_blank(),
         legend.position = "none")
 
+## trying to create map with leaflet
+leaflet(options = leafletOptions(attributionControl = FALSE)) %>% 
+  addProviderTiles(providers$OpenStreetMap) %>% 
+  addScaleBar(position = "bottomleft") 
+
 ```
 
 
